// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AnswersList test, correct_answer_id !== item.id 1`] = `
<div
  className="answers-list"
>
  <Content
    answerId={1}
    buttonParams={
      Object {
        "answerId": 1,
        "questionId": undefined,
        "whowasvoted": undefined,
      }
    }
    questionData={
      Object {
        "answers": Array [
          Object {
            "id": 1,
            "userInfo": Object {},
          },
          Object {
            "id": 2,
            "userInfo": Object {},
          },
          Object {
            "id": 3,
            "userInfo": Object {},
          },
        ],
        "correct_answer_id": 0,
      }
    }
    type="answer"
    userInfo={Object {}}
  />
  <Content
    answerId={2}
    buttonParams={
      Object {
        "answerId": 2,
        "questionId": undefined,
        "whowasvoted": undefined,
      }
    }
    questionData={
      Object {
        "answers": Array [
          Object {
            "id": 1,
            "userInfo": Object {},
          },
          Object {
            "id": 2,
            "userInfo": Object {},
          },
          Object {
            "id": 3,
            "userInfo": Object {},
          },
        ],
        "correct_answer_id": 0,
      }
    }
    type="answer"
    userInfo={Object {}}
  />
  <Content
    answerId={3}
    buttonParams={
      Object {
        "answerId": 3,
        "questionId": undefined,
        "whowasvoted": undefined,
      }
    }
    questionData={
      Object {
        "answers": Array [
          Object {
            "id": 1,
            "userInfo": Object {},
          },
          Object {
            "id": 2,
            "userInfo": Object {},
          },
          Object {
            "id": 3,
            "userInfo": Object {},
          },
        ],
        "correct_answer_id": 0,
      }
    }
    type="answer"
    userInfo={Object {}}
  />
</div>
`;

exports[`AnswersList test, correct_answer_id === item.id 1`] = `
<div
  className="answers-list"
>
  <Content
    answerId={2}
    buttonParams={
      Object {
        "answerId": 2,
        "questionId": undefined,
        "whowasvoted": undefined,
      }
    }
    questionData={
      Object {
        "answers": Array [
          Object {
            "id": 1,
            "userInfo": Object {},
          },
          Object {
            "id": 2,
            "userInfo": Object {},
          },
          Object {
            "id": 3,
            "userInfo": Object {},
          },
        ],
        "correct_answer_id": 1,
      }
    }
    type="answer"
    userInfo={Object {}}
  />
  <Content
    answerId={3}
    buttonParams={
      Object {
        "answerId": 3,
        "questionId": undefined,
        "whowasvoted": undefined,
      }
    }
    questionData={
      Object {
        "answers": Array [
          Object {
            "id": 1,
            "userInfo": Object {},
          },
          Object {
            "id": 2,
            "userInfo": Object {},
          },
          Object {
            "id": 3,
            "userInfo": Object {},
          },
        ],
        "correct_answer_id": 1,
      }
    }
    type="answer"
    userInfo={Object {}}
  />
</div>
`;
